tools section overwrap fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -178,4 +178,7 @@ footer .row {
         font-size: 1.5rem;
     }
 
+    #programming {
+        margin-bottom: 30%;
+    }
 }
